refactor(items/index.html.erb): link name changed

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -21,7 +21,7 @@
       <tr>
         <td><%= item.name %></td>
         <td><%= item.quantity %></td>
-        <td><%= link_to "Detalhar", item_path(item.id) %></td>
+        <td><%= link_to "Movimentar estoque", item_path(item.id) %></td>
       </tr>
     <% end %>
   </table>
